TM-1338 including training env

--- a/.github/workflows/ldap-rbac-uplift.yml
+++ b/.github/workflows/ldap-rbac-uplift.yml
@@ -11,6 +11,7 @@ on:
             - "stage"
             - "preprod"
             - "prod"
+            - "training"
 
       rbac_tag:
         required: true
