Set JAVA_HOME before calling emcli (#668)
* Fix SYS_PASSWORD path in Secrets Manager

* Detect Error Message from OEM

* Missing closing bracket

* JAVA_HOME must be set before calling emcli

* Change Evaluation Order of Condition

* Commit changes made by code formatters

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/playbooks/oracle_release_update/oracle_release_update/tasks/reinstall_osbws.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/reinstall_osbws.yml
@@ -60,7 +60,9 @@
 
     - name: Copy original osbws.ora to new home if original exists
       command: /usr/bin/cp -p "{{ source_home }}/dbs/osbws.ora" "{{ target_home }}/dbs/osbws.ora"
-      when: osbws_config_exists_original.stat.exists and not osbws_config_exists_new.stat.exists
+      when:
+        - not osbws_config_exists_new.stat.exists
+        - osbws_config_exists_original.stat.exists
 
     - name: Fail when config files not present in either home
       fail:
