Set JAVA_HOME before calling emcli

--- a/playbooks/oracle_release_update/update_oem/tasks/check_target_exists.yml
+++ b/playbooks/oracle_release_update/update_oem/tasks/check_target_exists.yml
@@ -4,6 +4,8 @@
 
 - name: Check if Given Target Exists
   shell: |
+    . ~/.bash_profile
+    export JAVA_HOME=$ORACLE_HOME/jdk/jre
     {{ emcli }} get_targets -targets="{{ target_name }}:{{ target_type }}" -script -noheader | wc -l
   register: get_target_exists
   changed_when: false
