--- a/playbooks/oracle_release_update/update_oem/tasks/delete_old_target.yml
+++ b/playbooks/oracle_release_update/update_oem/tasks/delete_old_target.yml
@@ -6,6 +6,8 @@
 # We only expect to see 1 HAS target, 1 ASM target and 1 Listener target on a given host (and all shouold be running from the Grid Infrastructure Home)
 - name: Generate Command to Get Existing Target Name
   shell: |
+    . ~/.bash_profile
+    export JAVA_HOME=$ORACLE_HOME/jdk/jre
     {{ emcli }} list -resource="Targets" -search="HOST_NAME='{{ agent_host }}'" -search="TARGET_TYPE='{{ target_type }}'" -column="TARGET_NAME" -script -noheader
   register: existing_target_name
   changed_when: false
@@ -16,6 +18,8 @@
 
 - name: Get the Target Home
   shell: |
+    . ~/.bash_profile
+    export JAVA_HOME=$ORACLE_HOME/jdk/jre
     {{ get_target_home_cmd }}
   register: get_target_home_match
   changed_when: false
@@ -29,10 +33,14 @@
   block:
     - name: Delete Target from Repository
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         {{ emcli }} delete_target -name="{{ existing_target_name.stdout }}" -type="{{ target_type }}"
 
     - name: Wait for Existing Target Deletion
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         {{ emcli }} get_targets -targets="{{ existing_target_name.stdout }}:{{ target_type }}" -noheader -script | wc -l
       register: target_deleted
       until: target_deleted.stdout | int == 0
