--- a/playbooks/oracle_release_update/update_oem/tasks/update_agent_targets.yml
+++ b/playbooks/oracle_release_update/update_oem/tasks/update_agent_targets.yml
@@ -7,13 +7,18 @@
     # This will be the same as the lifecycle status of the existing targets that they are due to replace.
     - name: Generate Command to List Existing Target Properties
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         {{ emcli }} list -resource="Targets" -search="HOST_NAME='{{ agent_host }}'" -column="TARGET_NAME" -script -noheader | awk '{printf("{{ emcli }} list -resource=\"TargetProperties\" -search=\"TARGET_NAME='"'"'%s'"'"'\" -column=\"PROPERTY_NAME,PROPERTY_VALUE\" -script; ",$1)}'
       register: existing_target_properties
       changed_when: false
+      failed_when: (existing_target_properties.rc != 0) or (existing_target_properties.stderr is search('Error:.*'))
 
     # We determine lifecycle status based on the most commonly used status for all existing targets on the host
     - name: Get the Lifecycle Status
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         ({{ existing_target_properties.stdout }}) | grep orcl_gtp_lifecycle_status | sort | uniq -c | sort -r -n -k1 | head -1 | awk '{print $NF}'
       register: get_lifecycle_status
       changed_when: false
@@ -21,6 +26,8 @@
     # We determine Slack Channel based on the most commonly used Slack Channel for all existing targets on the host
     - name: Get the Slack Channel Contact
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         ({{ existing_target_properties.stdout }}) | grep orcl_gtp_contact | sort | uniq -c | sort -r -n -k1 | head -1 | awk '{print $NF}'
       register: get_slack_channel_contact
       changed_when: false
@@ -42,6 +49,8 @@
     # (Do not delete the Old Oracle Home as that will be decommissioned separately)
     - name: Generate Command to List Existing Oracle Home Properties
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         {{ emcli }} list -resource="Targets" -search="HOST_NAME='{{ agent_host }}'" -search="TARGET_TYPE='oracle_home'" -column="TARGET_NAME" -script -noheader | grep -v 'Synchronized successfully' | awk '{printf("{{ emcli }} list -resource=\"TargetProperties\" -search=\"TARGET_NAME='"'"'%s'"'"'\" -column=\"PROPERTY_NAME,PROPERTY_VALUE\" -script; ",$1)}'
       register: existing_oracle_home_properties
       changed_when: false
@@ -52,6 +61,8 @@
 
     - name: Find out if the New Grid Infrastructure Oracle Home target exists
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         {{ get_new_gi_home_cmd }}
       register: get_new_oracle_grid_home_exists
       changed_when: false
@@ -94,6 +105,8 @@
 
         - name: Create Oracle GI Home Target
           shell: |
+            . ~/.bash_profile
+            export JAVA_HOME=$ORACLE_HOME/jdk/jre
             {{ emcli }} add_target -name="{{ gi_home_name }}" -type="oracle_home" -host="{{ agent_host }}" -properties="HOME_TYPE:{{ gi_home_type }};INSTALL_LOCATION:{{ gi_install_location }};INVENTORY:{{ gi_inventory }};orcl_gtp_lifecycle_status:{{ lifecycle_status }};orcl_gtp_contact:{{ slack_channel_contact }};orcl_gtp_line_of_bus:{{ application }}"
 
       when: get_new_oracle_grid_home_exists.stdout_lines[-1] == "0"
@@ -118,12 +131,16 @@
     # Create New HAS Target if one does not already exist
     - name: Create New HAS Target
       shell: |
-        {{ emcli }} add_target -name="has_{{ agent_host }}" -type="has" -host="{{ agent_host }}" -properties="OracleHome:{{ target_gi_home }};orcl_gtp_lifecycle_status:{{ lifecycle_status }};orcl_gtp_contact:{{ slack_channel_contact }};orcl_gtp_line_of_bus:{{ application }}" | tail -1
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
+        {{ emcli }} add_target -name="has_{{ agent_host }}" -type="has" -host="{{ agent_host }}" -properties="OracleHome:{{ target_gi_home }};orcl_gtp_lifecycle_status:{{ lifecycle_status }};orcl_gtp_contact:{{ slack_channel_contact }};orcl_gtp_line_of_bus:{{ application }};isSiha:YES" | tail -1
       when: not ( target_exists | bool )
 
     # Ensure the properties of the HAS target are up to date
     - name: Modify HAS Target
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         {{ emcli }} modify_target -name="has_{{ agent_host }}" -type="has" -host="{{ agent_host }}" -properties="isSiha:YES;OracleHome:{{ target_gi_home }};orcl_gtp_lifecycle_status:{{ lifecycle_status }};orcl_gtp_contact:{{ slack_channel_contact }};orcl_gtp_line_of_bus:{{ application }}"
 
     #########################################
@@ -164,6 +181,8 @@
     # (Do not delete the 11g Oracle Home as that will be decommissioned separately)
     - name: Generate Command to List Existing Oracle Home Properties
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         {{ emcli }} list -resource="Targets" -search="HOST_NAME='{{ agent_host }}'" -search="TARGET_TYPE='oracle_home'" -column="TARGET_NAME" -script -noheader | grep -v 'Synchronized successfully' | awk '{printf("{{ emcli }} list -resource=\"TargetProperties\" -search=\"TARGET_NAME='"'"'%s'"'"'\" -column=\"PROPERTY_NAME,PROPERTY_VALUE\" -script; ",$1)}'
       register: existing_oracle_home_properties
       changed_when: false
@@ -174,6 +193,8 @@
 
     - name: Find out if the New Database Oracle Home target exists
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         {{ get_new_db_home_cmd }}
       register: get_new_oracle_database_home_exists
       changed_when: false
@@ -216,6 +237,8 @@
 
         - name: Create Oracle Home Target
           shell: |
+            . ~/.bash_profile
+            export JAVA_HOME=$ORACLE_HOME/jdk/jre
             {{ emcli }} add_target -name="{{ db_home_name }}" -type="oracle_home" -host="{{ agent_host }}" -properties="HOME_TYPE:{{ db_home_type }};INSTALL_LOCATION:{{ db_install_location }};INVENTORY:{{ db_inventory }};orcl_gtp_lifecycle_status:{{ lifecycle_status }};orcl_gtp_contact:{{ slack_channel_contact }};orcl_gtp_line_of_bus:{{ application }}"
 
       when: get_new_oracle_database_home_exists.stdout_lines[-1] == "0"
@@ -224,17 +247,23 @@
     # in different environments so we cannot assume which case has been used
     - name: Get Database Target Name
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         {{ emcli }} list -resource="Targets" -search="HOST_NAME='{{ agent_host }}'" -search="TARGET_TYPE='oracle_database'" -column="TARGET_NAME" -script -noheader | grep -v 'Synchronized successfully' | awk '{print $1}'
       register: database_target_name
       changed_when: false
 
     - name: Find Out Oracle Home of Database from Cloud Control
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         {{ emcli }} list -resource="TargetProperties" -search="TARGET_NAME='{{ database_target_name.stdout }}'" -column="PROPERTY_NAME,PROPERTY_VALUE" -script | grep -v 'Synchronized successfully' | grep OracleHome | awk '{print $2}'
       changed_when: false
       register: db_home_in_cloud
 
     - name: Assign Database to New Home
       shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         {{ emcli }} modify_target -name="{{ database_target_name.stdout }}" -type="oracle_database" -properties="OracleHome:{{ target_db_home }}" -on_agent
       when: not ((db_home_in_cloud.stdout_lines | join(' ')) is search(target_db_home))
