--- a/.github/workflows/oracle-db-deinstall.yml
+++ b/.github/workflows/oracle-db-deinstall.yml
@@ -44,6 +44,7 @@ on:
           - "DO_NOT_DEINSTALL"
           - "/u01/app/grid/product/19.0.0/grid"
           - "/u01/app/grid/product/19.24.0/grid"
+          - "/u01/app/grid/product/19.25.0/grid"
       DatabaseHome:
         description: "Oracle Database Home to Deinstall"
         type: choice
@@ -52,6 +53,7 @@ on:
           - "DO_NOT_DEINSTALL"
           - "/u01/app/oracle/product/19.0.0/db"
           - "/u01/app/oracle/product/19.24.0/db"
+          - "/u01/app/oracle/product/19.25.0/db"
       VerboseOutput:
         description: "Verbose Output level"
         type: choice
