--- a/playbooks/oracle_release_update/oracle_release_update/tasks/enable_adg.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/enable_adg.yml
@@ -21,7 +21,7 @@
 # Do not bounce an open database -- it will be in use as a Snapshot Standby
 - name: Bounce Standby Database Following Config Change
   when:
-    - adg_config.stdout_lines[-1] != 'mount'
+    - adg_config.stdout_lines[-1] != 'read only'
     - adg_config.stdout_lines[-1] != 'open'
   block:
     - name: Shutdown Database
