--- a/.github/workflows/oracle-db-statistics.yml
+++ b/.github/workflows/oracle-db-statistics.yml
@@ -336,96 +336,48 @@ jobs:
           -e statistics_identifier=${{ needs.oracle-export-remote-delius-statistics.outputs.RemoteStatisticsIdentifier }} \
           -e export_to_s3=no ${{ github.event.inputs.VerboseOutput }}
 
-  slack-notification:
-    if: ${{ failure() }}
+  setup-notification-failure-slack:
+    if: failure()
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
     needs: [oracle-pre-delius-statistics,oracle-gather-delius-statistics,oracle-export-remote-delius-statistics,oracle-import-delius-statistics]
-    environment: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.TargetEnvironment || needs.oracle-rman-duplicate-check.outputs.TargetEnvironment }}-preapproved
-    env:
-      TargetHost: ${{ needs.oracle-pre-delius-statistic.outputs.TargetHost }}
-      TargetEnvironment: ${{ needs.oracle-pre-delius-statistic.outputs.TargetEnvironment }}
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     steps:
-
-      - name: Configure AWS Credentials
-        id: login-aws
-        uses: aws-actions/configure-aws-credentials@v4
+       
+      - name: Send Slack Failure Notification
+        id: foreground_slack_notification
+        uses: ./.github/actions/send_slack_notification
         with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
-          aws-region: "eu-west-2"
+          SlackChannel: "#delius-aws-oracle-dev-alerts-test"
+          Emoji: ":github-red:"
+          TextHeader: "Statistics Job Failure"
+          TextBody: "Statistics job failed during foreground run. "
 
-      - name: Get Slack Token
-        id: get-slack-token
-        shell: bash
-        run: |
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          OEM_ACCOUNT_ID=$(aws ssm get-parameter --name account_ids --region eu-west-2 --with-decryption  --output json | \
-                jq '.Parameter.Value' | tr -d '\' | sed 's/^\"//' | sed 's/\"$//' | \
-                jq -r 'to_entries | map(select(.key | contains("hmpps-oem-"))) | first' | jq -r '.value' )
-          SECRET_ARN="arn:aws:secretsmanager:eu-west-2:${OEM_ACCOUNT_ID}:secret:/oracle/database/EMREP/shared-passwords"
-          SECRET_VALUE=$(aws secretsmanager get-secret-value --secret-id "${SECRET_ARN}" --query SecretString --output json)
-          SLACK_TOKEN=$(echo ${SECRET_VALUE} | jq -r | jq -r 'to_entries[] | select(.key=="slack_token").value')
-          echo "slack_token=${SLACK_TOKEN}" >> $GITHUB_OUTPUT
-
-          if [[ "${{ needs.oracle-pre-delius-statistics.result }}" == "failure" ]]
-          then
-            echo "jobid=${{ needs.oracle-pre-delius-statistics.outputs.JobId }}" >> $GITHUB_OUTPUT
-          elif [[ "${{ needs.oracle-gather-delius-statistics.result }}" == "failure" ]]
-          then
-            echo "jobid=${{ needs.oracle-gather-delius-statistics.outputs.JobId }}" >> $GITHUB_OUTPUT
-          elif [[ "${{ needs.oracle-export-remote-delius-statistics.result }}" == "failure" ]]
-          then
-            echo "jobid=${{ needs.oracle-export-remote-delius-statistics.outputs.JobId }}" >> $GITHUB_OUTPUT
-          elif [[ "${{ needs.oracle-import-delius-statistics.result }}" == "failure" ]]
-          then
-            echo "jobid=${{ needs.oracle-import-delius-statistics.outputs.JobId }}" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Slack Failure Notification
-        id: slack
-        uses: slackapi/slack-github-action@v1.27.0
+  completion-slack:
+    if: github.event_name == 'repository_dispatch'
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
+    steps:
+       
+      - name: Send Slack Failure Notification
+        if: github.event.action == 'oracle-db-statistics-failure'
+        id: background_failure_slack_notification
+        uses: ./.github/actions/send_slack_notification
         with:
-            channel-id: "delius-aws-oracle-dev-alerts"
-            payload: |
-              { 
-                "icon_emoji":"large_purple_circle",
-                "text":"Failed Delius Oracle Statistics",
-                "blocks":[
-                  {
-                    "type": "section",
-                    "text": 
-                    {
-                      "type": "mrkdwn",
-                      "text": "Failed Delius Oracle Statistics:"}
-                    },
-                    {
-                      "type": "section",
-                      "fields":[
-                          {
-                            "type": "mrkdwn",
-                            "text": "*Workflow:*\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }}>"
-                          },
-                          {
-                            "type": "mrkdwn",
-                            "text": "*Job:*\n${{ steps.get-slack-token.outputs.jobid }}"
-                          },
-                          {
-                            "type": "mrkdwn",
-                            "text": "*Repo:*\n${{ github.repository }}"
-                          },
-                          {
-                            "type": "mrkdwn",
-                            "text": "*Target Host:*\n${{ env.TargetHost }}"
-                          },
-                          {
-                            "type": "mrkdwn",
-                            "text": "*Target Environment:*\n${{ env.TargetEnvironment }}"
-                          }
-                        ]
-                    }  
-                  ]
-                }
-        env:
-          SLACK_BOT_TOKEN: ${{ steps.get-slack-token.outputs.slack_token }}
+          SlackChannel: "#delius-aws-oracle-dev-alerts-test"
+          Emoji: ":github-red:"
+          TextHeader: "Statistics Job Failure"
+          TextBody: "Statistics job failed during background run. "
+
+      - name: Send Slack Success Notification
+        if: github.event.action == 'oracle-db-statistics-success'
+        id: background_success_slack_notification
+        uses: ./.github/actions/send_slack_notification
+        with:
+          SlackChannel: "#delius-aws-oracle-dev-alerts-test"
+          Emoji: ":github-green:"
+          TextHeader: "Statistics Job Success"
+          TextBody: "Statistics job completed successfully. "
