--- a/.github/actions/send-slack-notification/action.yml
+++ b/.github/actions/send-slack-notification/action.yml
@@ -11,12 +11,28 @@ inputs:
       default: ":github:"
     TextHeader:
       description: "Text Header for Slack (this is not displayed)"
-      required: false
+      required: true
       default: "Slack Message"
     TextBody:
       description: "Text Body for Slack Message"
       required: true
-
+    TargetEnvironment:
+      description: "Environment where this workflow is being run"
+      required: false
+    JobName:
+      description: "Job in Progress"
+      required: false
+    TargetHost:
+      description: "Host where this workflow is being run"
+      required: false
+    SourceCodeVersion:
+      description: "Source version for the hmpps-delius-operation-automation. Enter a pull request, branch, commit ID, tag, or reference."
+      default: "main"
+      required: false
+    SourceConfigVersion:
+      description: "Source version for the modernisation-platform-configuration-management. Enter a pull request, branch, commit ID, tag, or reference."
+      default: "main"
+      required: false
 
 runs:
    using: composite
@@ -24,13 +40,20 @@ runs:
 
       # Environment variables like AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY set by the action are not shared across jobs.
       # Therefore we need to reconfigure the AWS Credentials and not use those from any previous job.
-      - name: Configure AWS Credentials
-        id: login-aws
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
-          aws-region: "eu-west-2"
+      # - name: Configure AWS Credentials
+      #   id: login-aws
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+      #     role-session-name: "hmpps-delius-operational-automation-send_slack-notification-${{ github.run_number }}"
+      #     aws-region: "eu-west-2"
+
+      # ACT Inside the job steps, before the "Configure AWS Credentials" step
+      - name: Inject static AWS creds (for act)
+        run: |
+             echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID"  >> "$GITHUB_ENV"
+             echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY"  >> "$GITHUB_ENV"
+             echo "AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN"  >> "$GITHUB_ENV"
 
       - name: Get Slack Token
         id: get-slack-token
@@ -39,22 +62,31 @@ runs:
             ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
             # The OEM account associated with the current environment is always prefixed by hmpps-oem-
             OEM_ACCOUNT_ID=$(aws ssm get-parameter --name account_ids --region eu-west-2 --with-decryption  --output json | \
-                  jq '.Parameter.Value' | tr -d '\' | sed 's/^\"//' | sed 's/\"$//' | \
+                  jq '.Parameter.Value' | tr -d '\\' | sed 's/^\"//' | sed 's/\"$//' | \
                   jq -r 'to_entries | map(select(.key | contains("hmpps-oem-"))) | first' | jq -r '.value' )
             SECRET_ARN="arn:aws:secretsmanager:eu-west-2:${OEM_ACCOUNT_ID}:secret:/oracle/database/EMREP/shared-passwords"
-            SECRET_VALUE=$(aws secretsmanager get-secret-value --secret-id "${SECRET_ARN}" --query SecretString --output json)
+            SECRET_VALUE=$(aws secretsmanager get-secret-value --secret-id "${SECRET_ARN}" --query SecretString --region eu-west-2 --output json)
             SLACK_TOKEN=$(echo ${SECRET_VALUE} | jq -r | jq -r 'to_entries[] | select(.key=="slack_token").value')
             echo "slack_token=${SLACK_TOKEN}" >> $GITHUB_OUTPUT
 
+      - name: Get Target Slack Channel
+        id: get_target_slack_channel
+        # continue-on-error: true
+        uses: ./.github/actions/get-target-slack-channel
+        with:
+           TargetHost: "${{ inputs.TargetHost }}"
+           SourceCodeVersion: "${{ inputs.SourceCodeVersion }}"
+           SourceConfigVersion: "${{ inputs.SourceConfigVersion }}"
+
       - name: Send Slack Message
-          id: slack
-          uses: slackapi/slack-github-action@v1.27.0
-          with:
+        id: slack
+        uses: slackapi/slack-github-action@v1.27.0
+        with:
               channel-id: "${{ inputs.SlackChannel }}"
               payload: |
                 { 
                   "icon_emoji":"${{ inputs.Emoji }}",
-                  "text":"${{ inputs.Text }}",
+                  "text":"${{ inputs.TextHeader }}",
                   "blocks":[
                     {
                       "type": "section",
@@ -72,7 +104,7 @@ runs:
                             },
                             {
                               "type": "mrkdwn",
-                              "text": "*Job:*\n${{ steps.get-slack-token.outputs.jobid }}"
+                              "text": "*Job:*\n${{ inputs.JobName }}"
                             },
                             {
                               "type": "mrkdwn",
@@ -80,15 +112,15 @@ runs:
                             },
                             {
                               "type": "mrkdwn",
-                              "text": "*Target Host:*\n${{ env.TargetHost }}"
+                              "text": "*Target Host:*\n${{ inputs.TargetHost }}"
                             },
                             {
                               "type": "mrkdwn",
-                              "text": "*Target Environment:*\n${{ env.TargetEnvironment }}"
+                              "text": "*Target Environment:*\n${{ inputs.TargetEnvironment }}"
                             }
                           ]
                       }  
                     ]
                   }
-          env:
+        env:
             SLACK_BOT_TOKEN: ${{ steps.get-slack-token.outputs.slack_token }}
