--- a/.github/actions/send-slack-notification/action.yml
+++ b/.github/actions/send-slack-notification/action.yml
@@ -37,20 +37,20 @@ runs:
 
       # Environment variables like AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY set by the action are not shared across jobs.
       # Therefore we need to reconfigure the AWS Credentials and not use those from any previous job.
-      # - name: Configure AWS Credentials
-      #   id: login-aws
-      #   uses: aws-actions/configure-aws-credentials@v4
-      #   with:
-      #     role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-      #     role-session-name: "hmpps-delius-operational-automation-send_slack-notification-${{ github.run_number }}"
-      #     aws-region: "eu-west-2"
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-send_slack-notification-${{ github.run_number }}"
+          aws-region: "eu-west-2"
 
-      # ACT Inside the job steps, before the "Configure AWS Credentials" step
-      - name: Inject static AWS creds (for act)
-        run: |
-             echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID"  >> "$GITHUB_ENV"
-             echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY"  >> "$GITHUB_ENV"
-             echo "AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN"  >> "$GITHUB_ENV"
+      # ACT ONLY: Inside the job steps, before the "Configure AWS Credentials" step
+      # - name: Inject static AWS creds (for act)
+      #   run: |
+      #        echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID"  >> "$GITHUB_ENV"
+      #        echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY"  >> "$GITHUB_ENV"
+      #        echo "AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN"  >> "$GITHUB_ENV"
 
       # The Slack Token is held in Secrets Manager for the respective hmpps-oem- account
       - name: Get Slack Token
