--- a/.github/actions/get-target-slack-channel/action.yml
+++ b/.github/actions/get-target-slack-channel/action.yml
@@ -63,7 +63,7 @@ runs:
         id: login-aws
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-to-assume: "arn:aws:iam::$AWS_ACCOUNT_ID:role/modernisation-platform-oidc-cicd"
           role-session-name: "hmpps-delius-operational-automation-get-target-slack-channel-${{ github.run_number }}"
           role-duration-seconds: 21600
           aws-region: "eu-west-2"
