--- a/.github/actions/send-slack-notification/action.yml
+++ b/.github/actions/send-slack-notification/action.yml
@@ -37,11 +37,13 @@ runs:
 
       # Environment variables like AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY set by the action are not shared across jobs.
       # Therefore we need to reconfigure the AWS Credentials and not use those from any previous job.
+      # Note that Repository variables like AWS_ACCOUNT_ID are also not available in a composite job,
+      # so we need to pass these as environment variables.
       - name: Configure AWS Credentials
         id: login-aws
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-to-assume: "arn:aws:iam::$AWS_ACCOUNT_ID:role/modernisation-platform-oidc-cicd"
           role-session-name: "hmpps-delius-operational-automation-send_slack-notification-${{ github.run_number }}"
           aws-region: "eu-west-2"
 
@@ -74,6 +76,8 @@ runs:
         id: get_target_slack_channel
         continue-on-error: true
         uses: ./.github/actions/get-target-slack-channel
+        env:
+           AWS_ACCOUNT_ID: "$AWS_ACCOUNT_ID"
         with:
            TargetHost: "${{ inputs.TargetHost }}"
            SourceCodeVersion: "${{ inputs.SourceCodeVersion }}"
