--- a/.github/workflows/oracle-db-statistics.yml
+++ b/.github/workflows/oracle-db-statistics.yml
@@ -369,6 +369,8 @@ jobs:
       - name: Send Slack Failure Notification
         id: foreground_slack_notification
         uses: ./.github/actions/send-slack-notification
+        env:
+            AWS_ACCOUNT_ID: "${{ vars.AWS_ACCOUNT_ID }}"
         with:
           Emoji: ":github-red:"
           TextHeader: "Statistics Job Failure"
@@ -397,6 +399,8 @@ jobs:
       - name: Send Slack Completion Success Notification
         id: background_success_slack_notification
         uses: ./.github/actions/send-slack-notification
+        env:
+          AWS_ACCOUNT_ID: ${{ vars.AWS_ACCOUNT_ID }}
         with:
           Emoji: ":github-green:"
           TextHeader: "Statistics Job Success"
