--- a/.github/actions/get-target-slack-channel/action.yml
+++ b/.github/actions/get-target-slack-channel/action.yml
@@ -4,7 +4,7 @@ description: Get Target Slack Channel from EM Properties
 inputs:
     TargetHost:
       description: "Host where this workflow is being run"
-      required: false
+      required: true
     SourceCodeVersion:
       description: "Source version for the hmpps-delius-operation-automation. Enter a pull request, branch, commit ID, tag, or reference."
       default: "main"
