--- a/.github/workflows/oracle-db-statistics.yml
+++ b/.github/workflows/oracle-db-statistics.yml
@@ -393,6 +393,10 @@ jobs:
       - name: Checkout Local Repo to get Composite Action
         uses: actions/checkout@v5
        
+      - name: Debug
+        run: |
+             echo "AWS_ACCOUNT_ID=${{ vars.AWS_ACCOUNT_ID }}"
+
       # If there was a failure during the background run this would have
       # been trapped already by the oracle-pre-delius-statistics job, so
       # we only need to handle the successful completion case here.
@@ -400,7 +404,7 @@ jobs:
         id: background_success_slack_notification
         uses: ./.github/actions/send-slack-notification
         env:
-          AWS_ACCOUNT_ID: ${{ vars.AWS_ACCOUNT_ID }}
+          AWS_ACCOUNT_ID: "${{ vars.AWS_ACCOUNT_ID }}"
         with:
           Emoji: ":github-green:"
           TextHeader: "Statistics Job Success"
