--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -25,6 +25,12 @@ jobs:
       - name: Filter Password Rotation Schedule
         id: filter-password-rotation-schedule
         run: |
+             echo "🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆"
+             echo "CS: ${{ github.event.schedule }}"
+             ls -l operations/.github/workflows/oracle-db-password-rotation-schedule.json
+             echo "-------"
+             cat operations/.github/workflows/oracle-db-password-rotation-schedule.json
+             echo "-------"
              SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetEnvironment"}]' operations/.github/workflows/oracle-db-password-rotation-schedule.json | jq '{include: .}')
              echo "scheduling_matrix="$(echo ${SCHEDULED_JSON} | sed 's/ //g') >> $GITHUB_OUTPUT
 
