--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -19,7 +19,8 @@ jobs:
           sparse-checkout: |
              .github/workflows/oracle-db-password-rotation-schedule.json
           path: operations
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
+          ref: ${{ github.event.inputs.SourceCodeVersion || 'main' }}
+#          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
 
       - name: Filter Password Rotation Schedule
